# liars-dice

./: CNAME  README.md  index.html  out5  pyproject.toml  script.js
.well-known/pki-validation/: 1C31089DADDBF2D396BC2FDB2167C63A.txt
code/: compare_models.py  convert_to_onnx.py  elo.py  lbr.py  play_model.py  snyd.py  train.py
liar_dice/: .gitignore  __init__.py  compare_models.py  elo.py  lbr.py  play_model.py  snyd.py  train.py
models/: model_11_joker.onnx  model_12_joker.onnx  model_13_joker.onnx  model_14_joker.onnx  model_15_joker.onnx  model_21_joker.onnx  model_22_joker.onnx  model_23_joker.onnx  model_24_joker.onnx  model_25_joker.onnx  model_31_joker.onnx  model_32_joker.onnx  model_33_joker.onnx  model_34_joker.onnx  model_35_joker.onnx  model_41_joker.onnx  model_42_joker.onnx  model_43_joker.onnx  model_44_joker.onnx  model_45_joker.onnx  model_51_joker.onnx  model_52_joker.onnx  model_53_joker.onnx  model_54_joker.onnx  model_55_joker.onnx
pytorch_models/: model_14_joker  model_15_joker  model_24_joker  model_25_joker  model_34_joker  model_35_joker  model_41_joker  model_42_joker  model_43_joker  model_44_joker  model_45_joker  model_51_joker  model_52_joker  model_53_joker  model_54_joker  model_55_joker
scripts/: combine.py  plot.py
static/: script.js  style.css
